// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message if there is a sign in error 1`] = `
<div
  className="root"
>
  <h2
    className="title"
  >
    Sign in to your account
  </h2>
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email Address
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="email"
            className="input"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="current-password"
            className="input"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="forgotPasswordButtonContainer"
    >
      <i />
    </div>
    <div
      className="signInError"
    >
      The account sign-in was incorrect or your account is disabled temporarily. Please wait and try again later.

    </div>
    <div
      className="buttonsContainer"
    >
      <i />
      <i />
    </div>
  </form>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="root"
>
  <h2
    className="title"
  >
    Sign in to your account
  </h2>
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email Address
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="email"
            className="input"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="current-password"
            className="input"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="forgotPasswordButtonContainer"
    >
      <i />
    </div>
    <div
      className="signInError"
    />
    <div
      className="buttonsContainer"
    >
      <i />
      <i />
    </div>
  </form>
</div>
`;
